Rewrote part of JavaluaLib, this gets rid of "LUserData objects return LMethods for all non-field names" and "huge performance drop when using a lot of Lua-scripted objects".